# autotone

./: .env.example  .gitignore  CLAUDE.md  README.ja.md  README.md  evaluate.py  generate.py  optimize.py  prepare.py  program.md  pyproject.toml
data/: sample_raw_posts.jsonl
data/private/: README.md
prompts/: best_prompt.md  default_prompt.md  working_prompt.md
src/autotone/: data.py  evaluate_lib.py  generate_lib.py  llm.py  metrics.py  prepare_lib.py  settings.py
src/tone_autoresearch/: data.py  evaluate_lib.py  generate_lib.py  llm.py  metrics.py  optimize_lib.py  prepare_lib.py  settings.py  utils.py
tests/: test_evaluate_lib.py  test_llm.py  test_prepare_lib.py
